--- a/FlowerGarden/pom.xml
+++ b/FlowerGarden/pom.xml
@@ -2,12 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com</groupId>
+	<!--<groupId>com</groupId>-->
 	<artifactId>flowergarden</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
-	<name>flowergarden</name>
+	<!--<version>0.0.1-SNAPSHOT</version>-->
+	<parent>
+		<groupId>com.flowergaren</groupId>
+		<artifactId>root</artifactId>
+		<relativePath>../pom.xml</relativePath>
+		<version>1.0</version>
+	</parent>
+    <name>flowergarden</name>
+    <packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -73,8 +78,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
