--- a/FlowerGarden/src/main/resources/jdbc.properties
+++ b/FlowerGarden/src/main/resources/jdbc.properties
@@ -1,2 +1,2 @@
 jdbc.driverClassName=org.sqlite.JDBC
-jdbc.url=jdbc:sqlite:flowergarden.db
+jdbc.url=jdbc:sqlite:C://Users/Nik/Desktop/Java/Java-Advanced-Feb-Apr-2018/FlowerGarden/flowergarden.db
